fix github jump link on mobile

--- a/static/mobile.css
+++ b/static/mobile.css
@@ -117,6 +117,12 @@
 	content: '';
 }
 
+#github_promo {
+	font-size: 200%;
+	padding-right: 25px;
+	padding-left: 25px;
+}
+
 /* homepage */
 
 #main {
